--- a/eTicket/Views/Cinemas/Index.cshtml
+++ b/eTicket/Views/Cinemas/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@using eTickets.Models
-@model IEnumerable<Producer>
+@model IEnumerable<Cinema>
 
 @{
-    ViewData["Title"] = "List of Producers";
+    ViewData["Title"] = "List of Cinemas";
 }
 
 <div class="row">
@@ -11,9 +11,9 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th>@Html.DisplayNameFor(model => model.ProfilePictureURL)</th>
-                    <th>@Html.DisplayNameFor(model => model.FullName)</th>
-                    <th>@Html.DisplayNameFor(model => model.Bio)</th>
+                    <th>@Html.DisplayNameFor(model => model.Logo)</th>
+                    <th>@Html.DisplayNameFor(model => model.Name)</th>
+                    <th>@Html.DisplayNameFor(model => model.Description)</th>
                     <th>Actions</th>
                 </tr>
             </thead>
@@ -22,13 +22,13 @@
                 {
                     <tr>
                         <td class="text-center">
-                            <img class="rounded-circle" src="@item.ProfilePictureURL" alt="@item.FullName" style="max-width: 150px" />
+                            <img class="rounded-circle" src="@item.Logo" alt="@item.Name" style="max-width: 150px" />
                         </td>
                         <td class="align-middle">
-                            @Html.DisplayFor(modelItem => item.FullName)
+                            @Html.DisplayFor(modelItem => item.Name)
                         </td>
                         <td class="align-middle">
-                            @Html.DisplayFor(modelItem => item.Bio)
+                            @Html.DisplayFor(modelItem => item.Description)
                         </td>
                         <td class="align-middle">
                             <a class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i>Edit </a> |
