--- a/eTicket/Views/Actors/Index.cshtml
+++ b/eTicket/Views/Actors/Index.cshtml
@@ -13,7 +13,7 @@
 
         <table class="table">
             <thead>
-                <tr>
+                <tr class="text-center">
                     <th>@Html.DisplayNameFor(model => model.ProfilePictureURL)</th>
                     <th>@Html.DisplayNameFor(model => model.FullName)</th>
                     <th>@Html.DisplayNameFor(model => model.Bio)</th>
@@ -48,6 +48,5 @@
 </div>
 <div style="position: fixed; right: 25px; bottom: 25px;" class="text-white">
     <a asp-controller="Actors" asp-action="Create" class="btn btn-success">
-        <i class="bi bi-plus-circle"></i> Add New
-    </a>
+        <i class="bi bi-plus-circle"></i> Add New </a>
 </div>
