--- a/eTicket/Views/Shared/_Layout.cshtml
+++ b/eTicket/Views/Shared/_Layout.cshtml
@@ -38,8 +38,8 @@
 
                      </ul>
 
-					<form class="form-inline my-2 my-lg-0" asp-controller="Home" asp-action="Filter" style="padding-right: 25px>
-						<input name="searchString" type="text" class="form-control" placeholder="Search for a movie" aria-label="Recipent's username" aria-describedby="button-addon2">
+					<form class="form-inline my-2 my-lg-0" asp-controller="Home" asp-action="Filter" style="padding-right: 25px;">
+						<input name="searchString" type="text" class="form-control" placeholder="Search for a movie..." aria-label="Recipient's username" aria-describedby="button-addon2">
 						<button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="bi bi-search"></i></button>
 					</form>
 
@@ -60,6 +60,7 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
