"Fixed connection string and updated database 71e"

--- a/eTickets/Views/Actors/Edit.cshtml
+++ b/eTickets/Views/Actors/Edit.cshtml
@@ -1,9 +1,7 @@
-﻿@using eTickets.Models
-
-@model Actor
+﻿@model Actor
 
 @{
-	ViewData["Title"] = "Update an Actor";
+	ViewData["Title"] = "Update actor";
 }
 
 <div class="row text">
