--- a/eTickets/Views/Actors/Index.cshtml
+++ b/eTickets/Views/Actors/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using eTickets.Models
-@model IEnumerable<Actor>
+﻿@model IEnumerable<Actor>
 
 @{
     ViewData["Title"] = "List of Actors";
@@ -48,8 +47,3 @@
 </div>
 
 @await Html.PartialAsync("_CreateItem", "Actors")
-
-@* <div style="position: fixed; right: 25px; bottom: 25px;" class="text-white">
-    <a asp-controller="Actors" asp-action="Create" class="btn btn-success">
-        <i class="bi bi-plus-circle"></i> Add New </a>
-</div> *@
