--- a/eTickets/Views/Cinemas/Delete.cshtml
+++ b/eTickets/Views/Cinemas/Delete.cshtml
@@ -1,6 +1,4 @@
-﻿@using eTickets.Models
-
-@model Cinema
+﻿@model Cinema
 
 @{
 	ViewData["Title"] = "Delete Cinema";
@@ -49,7 +47,7 @@
 	<script>
 		//jQuery
 		$(document).ready(function () {
-				var output = document.getElementById('LogPreview');
+				var output = document.getElementById('LogoPreview');
 				output.src = $("#Logo").val();
 		})
 	</script>
