--- a/eTickets/Views/Movies/Details.cshtml
+++ b/eTickets/Views/Movies/Details.cshtml
@@ -1,5 +1,4 @@
-﻿@using eTickets.Models
-@model Movie
+﻿@model Movie
 
 @{
 	ViewData["Title"] = "Movie Details";
@@ -7,7 +6,7 @@
 
 <div class="row">
 	<div class="col-md-8 offset-2">
-		<div class="card mb-12" ;">
+		<div class="card mb-12">
 			<div class="row g-0">
 				<div class="col-md-12">
 					<div class="card-header text-white bg-info">
@@ -25,19 +24,15 @@
 					<div class="card-body">
 						<p class="card-text">@Model.Description</p>
 						<p class="card-text">
-							<b>Cinema: </b>@Model.Cinema.Name
-							<a>
-								<i asp-controller="Cinemas" asp-action="Details" asp-route-id="@Model.CinemaId">
+							<b>Cinema: </b>
+							<a asp-controller="Cinemas" asp-action="Details" asp-route-id="@Model.CinemaId">
 									@Model.Cinema.Name
-								</i>
 							</a>
 						</p>
 						<p class="card-text">
 							<b>Producer: </b>
-							<a>
-								<i asp-controller="Producer" asp-action="Details" asp-route-id="@Model.ProducerId">
+							<a asp-controller="Producers" asp-action="Details" asp-route-id="@Model.ProducerId">
 									@Model.Producer.FullName
-								</i>
 							</a>
 						</p>
 						<p class="card-text"><b>Category: </b>@Model.MovieCategory</p>
@@ -59,14 +54,15 @@
 							}
 						</p>
 						<p class="card-text">
-							<b>Actors></b>
+							<b>Actors:</b>
 							<hr />
 							<div class="row">
 								@foreach (var actor in Model.Actors_Movies)
 								{
-									<div class="columns text-center">
-										<img class="border-info rounded-circle" src="@actor.Actor.ProfilePictureURL" style="max-width: 150px" /><br />
-										<a asp-controller="Actors" asp-action="Details" asp-route-id="@actor.Actor.Id">@actor.Actor.FullName</a>
+									<div class="column text-center">
+										<img class="border-info rounded-circle" src="@actor.Actor.ProfilePictureURL" style="max-width: 150px" />
+										<br />
+										<a asp-controller="Actors" asp-action="Details" asp-route-id="@actor.ActorId">@actor.Actor.FullName</a>
 									</div>
 								}
 							</div>
@@ -79,7 +75,7 @@
 							<a class="btn btn-outline-primary float-right" asp-action="Index">
 								Back to List
 							</a>
-							<a class="btn btn-success text-white"><i class="bi bi-cart-plus"></i> Add to Cart (Price @Model.Price.ToString("c"))</a>
+							<a class="btn btn-success text-white" asp-controller="Orders" asp-action="AddItemToShoppingCart" asp-route-id="@Model.Id"><i class="bi bi-cart-plus"></i> Add to Cart (Price @Model.Price.ToString("c"))</a>
 						</p>
 					</div>
 				</div>
