--- a/eTickets/Views/Producers/Index.cshtml
+++ b/eTickets/Views/Producers/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using eTickets.Models
-@model IEnumerable<Producer>
+﻿@model IEnumerable<Producer>
 
 @{
     ViewData["Title"] = "List of Producers";
@@ -46,9 +45,4 @@
 
 @await Html.PartialAsync("_CreateItem", "Producers")
 
-@* <div style="position: fixed; right: 25px; bottom: 25px;" class="text-white">
-    <a  asp-action="Create" class="btn btn-success">
-        <i class="bi bi-plus-circle"></i> Add New
-    </a>
-</div> *@
 
