--- a/eTickets/Views/Shared/NotFound.cshtml
+++ b/eTickets/Views/Shared/NotFound.cshtml
@@ -1,9 +1,7 @@
 ﻿<div class="row">
-	<div class="col-md-6 offset-3">
-	<h1 class="text-info ">You have reached the end of the internet.</h1>
-	<hr/>
-	<h1 class="alert-danger">Just kidding. You have queryed for a non-existing record</h1>
-	<hr />
-	<a class="btn btn-outline-success" asp-controller="Movies" asp-action="Index">Home Page</a>
-	</div>
+    <div class="col-md-6 offset-3">
+        <h1 class="text-info">You've reached the end of the internet</h1>
+        <hr />
+        <a class="btn btn-outline-success" asp-controller="Movies" asp-action="Index">Home Page</a>
+    </div>
 </div>
