--- a/eTickets/Views/Movies/Index.cshtml
+++ b/eTickets/Views/Movies/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using eTickets.Models
-@model IEnumerable<Movie>
+﻿@model IEnumerable<Movie>
 
 @{
 	ViewData["Title"] = "List of Movies";
@@ -53,8 +52,9 @@
 						<div class="card-footer">
 							<p class="card-text">
 								<a class="btn btn-outline-primary float-right" asp-action="Details" asp-route-id="@item.Id">
-									<i class="bi bi-eye-fill"></i> Show Details</a>
-								<a class="btn btn-success text-white"><i class="bi bi-cart-plus"></i> Add to Cart (Price @item.Price.ToString("c"))</a>
+									<i class="bi bi-eye-fill"></i> Show Details
+									</a>
+								<a class="btn btn-success text-white" asp-controller="Orders" asp-action="AddItemToShoppingCart" asp-route-id="@item.Id"><i class="bi bi-cart-plus"></i> Add to Cart (Price @item.Price.ToString("c"))</a>
 							</p>
 						</div>
 					</div>
