--- a/eTickets/Views/Orders/ShoppingCart.cshtml
+++ b/eTickets/Views/Orders/ShoppingCart.cshtml
@@ -57,6 +57,10 @@
 
         <div class="text-center">
             <div class="btn-group">
+                <a>
+                    <a class="btn btn-outline-primary" asp-action="CompleteOrder">
+                        Complete order
+                </a>
                 <a class="btn btn-outline-success" asp-controller="Movies" asp-action="Index">
                     Add more items
                 </a>
