added paypal button

--- a/eTickets/Views/Orders/ShoppingCart.cshtml
+++ b/eTickets/Views/Orders/ShoppingCart.cshtml
@@ -55,12 +55,14 @@
             </tfoot>
         </table>
 
-        <div class="text-center">
+        <div class="text-right">
             <div class="btn-group">
                 <a>
-                    <a class="btn btn-outline-primary" asp-action="CompleteOrder">
+@*                     <a class="btn btn-outline-primary" asp-action="CompleteOrder">
                         Complete order
-                </a>
+                </a> *@
+                <div id="paypal-btn"></div>
+                <span style="padding:5px"></span>
                 <a class="btn btn-outline-success" asp-controller="Movies" asp-action="Index">
                     Add more items
                 </a>
@@ -69,4 +71,38 @@
 
     </div>
 </div>
+@section Scripts{
+    <script src="https://www.paypalobjects.com/api/checkout.js"></script>
+
+    <script>
+        paypal.Button.render({
+            //Configure enviroment
+            env: 'sandbox',
+            client: {
+                sandbox: 'AWPGcxAX9pq37ho7WfjFrfmCxe2AuUZaQrOktmlEfxeSkNP-eR3F1n8fOc2QSSxWRux_bwOYgj9aQkV4'
+            },
+
+            //Customize Button
+            locale: 'en_US',
+            style: {
+                size: 'small',
+                color: 'gold',
+                shape: 'pill'
+
+            },
+            commit: true,
+            
+            //setup payment
+            payment: function(data, actions) {
+                console.log("payment setup");
+            },
+
+            //executer payment
+            onAuthorize: function(data, actions) {
+                console.log("payment executed")
+            }
+        },  '#paypal-btn')
+    </script>
+
+}
 
