--- a/eTickets/Views/Orders/Index.cshtml
+++ b/eTickets/Views/Orders/Index.cshtml
@@ -14,7 +14,7 @@
 			<thead>
 				<tr>
 					<th>Order ID</th>
-					<td>Items</td>
+					<th>Items</th>
 					<th>Total</th>
 					<th>User</th>
 				</tr>
@@ -39,7 +39,7 @@
 							</ul>
 						</td>
 						<td class="align-middle">
-						@order.OrderItems.Select(m => m.Movie.Price * m.Amount).Sum().ToString("c")
+							@order.OrderItems.Select(m => m.Movie.Price * m.Amount).Sum().ToString("c")
 						</td>
 						<td class="align-middle"> - </td>
 					</tr>
