--- a/eTickets/Views/Shared/_Layout.cshtml
+++ b/eTickets/Views/Shared/_Layout.cshtml
@@ -46,6 +46,11 @@
 					<ul class="navbar-nav">
 						@await Component.InvokeAsync("ShoppingCartSummary")
 					</ul>
+
+					<a class="btn btn-outline-success" my-2 my-sm-0 asp-controller="Account" asp-action="Login">
+						<i class="bi bi-box-arrow-in-right"></i> Log in
+					</a>
+
 					@*User Profile Section*@
 					<div class="dropdown">
 						<button class="btn btn-outline-success dropdown-toggle" type="button" id="profile-btn" data-toggle="dropdown"
